# CNBE-32-Chinese-Native-Binary-Encoding

./: .gitattributes  .gitignore  2_实验说明.md  3_架构设计.md  4_编码方案设计.md  CHANGELOG.md  CNBE32_标准引用附录.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_EN.md  README_ZH.md  RELEASE.md  SECURITY.md  cnbe_cam_top.sv  cnbe_enc.h.patch  cnbe_rad.h  cnbe_simulator.py  cnbe_struct.h  cnbe_table_fixed.h  encoding.h.patch  priority_encoder.sv  processor.cc.patch  pyproject.toml  tb_cnbe_cam.sv  test_clustering.c  test_cnbe_full.c  test_cnbe_unit.S  test_perf.c
.github/: copilot-instructions.md
agents/: README.md
cnbe-llm training(demo)/: CNBE32_Qwen3.5_Training_Whitepaper.md  README.md  training_5k_log.txt  training_log.txt
cnbe-llm-training-demo/: CNBE32_Qwen3.5_Training_Whitepaper.md  README.md
data/: CNBE-32_v3_全量验证实验白皮书.docx  CNBE-32_技术白皮书_发布版.docx  CNBE_White_Paper_v3_fixed_GB.docx  CNBE_大规模验证实验报告.docx  CNBE_编码目录_修复版_v3_完整统计报告.docx  benchmark_results.json  cnbe32.db  cnbe32.json  ext_db.csv  radix_table.csv  review_queue.jsonl  stroke_db.csv  struct_db.csv  v3_experiment_results.json
datasets/: README.md
docs/: 1_技术白皮书.md  5_产出报告.md  BENCHMARK.md  CNBE32_CJK_完整白皮书.md  CNBE32_GF0017_AGENT_TECHNICAL_WHITEPAPER.md  CNBE32_RISCV_技术白皮书_v2.md  CNBE32_双版本对比白皮书.md  CNBE8105_ENCODING_GOVERNANCE.md  CNBE_HANZI_STRUCTURE_AGENT_MODEL.md  CNBE_REPRODUCIBLE_AGENT_WORKFLOW.md  CNBE_RESEARCH_POSITION_STATEMENT.md  CNBE_STANDARDS_COMPLIANCE_STATEMENT.md  CNBE_VERSION_GOVERNANCE.md  COMPARISON.md  COPILOT_CLOUD_AGENT_LIMITATION.md  DATA_REPRODUCIBILITY_CONTRACT.md  EXPERIMENTS.md  FULL_CATALOG_DATABASE.md  PYTHON_SDK.md  REPOSITORY_STRUCTURE.md  VISION.md
evidence/: README.md
experiments/: CNBE_AI验证实验.py  E4_deepseek_framework.py  benchmark.py
hardware/: cnbe_macros.h  cnbe_riscv_sim.py  riscv_results.json  setup_and_run.bat  test_cnbe_full.c
include/: cnbe32.h
linux_cnbe32_riscv/: .gitignore  FULL_CHINESE_SYSTEM_COMPLETE.md  Makefile  README.md  README_CNBE32.md  README_EN.md  TRANSCODE_COMPLETE.md  WHITEPAPER.md  plan.md
llm_experiments/: README.md
reports/: 300_CHARACTER_8105_PILOT_PLAN.md  300_CHARACTER_PILOT_EVIDENCE_JOIN.md  300_character_8105_pilot_plan.json  300_character_pilot_evidence_join.json  8105_CNBE32_RUNTIME_PROMOTION.md  8105_CORE_BOUNDED_STANDARDIZER_PILOT.md  8105_CORE_PILOT_GF0017_PARTIAL_SCORING.md  8105_CORE_RULE_TO_FULL_CATALOG_ENCODING_PLAN.md  8105_CORE_STANDARD_SOURCE_JOIN_PILOT_PLAN.md  8105_CORE_STRUCTURE_DECOMPOSITION_SOURCE_EXTRACTION_PLAN.md  8105_CROSS_VALIDATION.md  8105_FULL_GAP_AUTO_FILL_CANDIDATES.md  8105_FULL_NO_LEGACY_GF0017_STRUCTURE_SCORING.md  8105_FULL_NO_LEGACY_STANDARDIZER.md  8105_GAP_PRIORITY_REFERENCE_CANDIDATES.md  8105_GAP_ZDIC_REFERENCE_BATCH.md  8105_HANZI_DECOMP_V03_ADAPTER.md  8105_HANZI_DECOMP_V03_HUMAN_APPROVED_STRUCTURE_PACKET.md  8105_HANZI_DECOMP_V03_STRUCTURE_CODE_CANDIDATE_PACKET.md  8105_INITIAL_AUTO_FILLED_PROJECT.md  8105_NO_LEGACY_GF0017_STRUCTURE_ITEM_SCORING.md  8105_NO_LEGACY_STANDARDIZER_PACKET_AUDIT.md  8105_RUNTIME_BLOCKER_RESOLUTION_PLAN.md  8105_STANDARDIZED_RUNTIME_REPAIR.md  8105_STRUCTURE_PILOT_HUMAN_REVIEW_CORRECTION.md  8105_cnbe32_runtime_promotion.json  8105_core_bounded_standardizer_pilot.json  8105_core_pilot_gf0017_partial_scoring.json  8105_core_rule_to_full_catalog_encoding_plan.json  8105_core_standard_source_join_pilot_plan.json  8105_core_structure_decomposition_source_extraction_plan.json  8105_full_gap_auto_fill_candidates.json  8105_full_no_legacy_gf0017_structure_scoring.json  8105_full_no_legacy_standardizer.json  8105_gap_priority_reference_candidates.json  8105_gap_zdic_reference_batch.json  8105_hanzi_decomp_v03_adapter.json  8105_hanzi_decomp_v03_human_approved_structure_packet.json  8105_hanzi_decomp_v03_structure_code_candidate_packet.json  8105_initial_auto_filled_project.json  (+134 more)
results/: CNBE-32_v10.5_黑洞引力场模拟实验白皮书.md  CNBE-32_v10.7_预训练底座验证实验白皮书.md  CNBE-32_v9.1_生命周期预测验证实验白皮书.md  CNBE32_TEST_REPORT_8105.md  README.md
riscv/: CNBE-32_v7.0.1_RISCV硬件验证实验白皮书.md  CNBE-32_v7.0_RISCV硬件验证初步实验白皮书.md  CNBE-32_v7.1.1_Spike自定义指令集成实验白皮书.md  CNBE-32_v7.1_RISCV自定义指令验证实验白皮书.md  README.md
scripts/: analyze_basic_cjk_scope_gap.py  apply_8105_gap_auto_fill_candidates.py  apply_8105_standardized_runtime_repair.py  apply_zdic_references_to_agent_review_packet.py  approve_hanzi_decomp_v03_8105_structure_packet.py  audit_8105_no_legacy_standardizer_packet.py  audit_cnbe8105_encoding_comparison.py  audit_cnbe_research_evidence_domains.py  audit_cnbe_research_sources.py  audit_dictionary_context_knowledge_merge.py  audit_full_catalog_structure.py  audit_full_catalog_xlsx.py  audit_mapping_provenance.py  audit_remaining_structure_agent_standard_review_priors.py  audit_structure_decomposition_evidence_repair_from_index.py  audit_v4_fixed_unicode_identity.py  (+90 more)
(+2160 files in other folders)
