[build-system]
requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"

[project]
name = "cnbe32"
 version = "1.0.1"
 description = "CNBE-32: Chinese Native Binary Encoding — Structured 32-bit CJK encoding for AI and hardware"
readme = "README.md"
 authors = [
   {name = "zairkliu"},
 ]
 license = "MulanPSL-2.0"
requires-python = ">=3.10"
dependencies = ["numpy>=2.0"]
 keywords = ["chinese", "encoding", "cjk", "riscv", "nlp", "structured-encoding"]
classifiers = [
    "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
     "Topic :: Software Development :: Embedded Systems",
     "Topic :: Text Processing :: Linguistic",
 ]

 [project.urls]
 Homepage = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding"
 Repository = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding"
 "Bug Tracker" = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding/issues"

 [tool.setuptools.packages.find]
 where = ["src"]


