[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cnbe32"
version = "1.0.1"
description = "CNBE-32: Chinese Native Binary Encoding — Structured 32-bit CJK encoding for AI and hardware"
readme = "README.md"
authors = [
    {name = "zairkliu"},
]
license = "MulanPSL-2.0"
requires-python = ">=3.10"
dependencies = ["numpy>=2.0"]
keywords = ["chinese", "encoding", "cjk", "riscv", "nlp", "structured-encoding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding"
Repository = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding"
"Bug Tracker" = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cnbe32 = ["data/cnbe32.db"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = ["integration: tests that require the cnbe32.db database file"]
testpaths = ["tests"]
python_files = ["test_*.py"]
