[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cnbe32"
version = "1.0.3"
description = "CNBE-32: Chinese Native Binary Encoding — Structured 32-bit CJK encoding for AI and hardware"
readme = "README.md"
authors = [{ name = "zairkliu" }]
license = "MulanPSL-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding"
Repository = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding"
Issues = "https://github.com/zairkliu/CNBE-32-Chinese-Native-Binary-Encoding/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cnbe32 = ["data/cnbe32.db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
markers = [
    "integration: tests that require the cnbe32.db database file",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"CNBE编码器.py" = ["ALL"]
"cnbe_simulator.py" = ["ALL"]
"generate_cnbe_table.py" = ["ALL"]
